<resources>
    <string name="app_name">sookhtjet</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="myDore">دوره های من </string>
    <string name="Wallet">کیف پول </string>
    <string name="UserProfile">پروفایل کاربری </string>
    <string name="chat">تالار گفتمان </string>
    <string name="amoozeshi">دوره های آموزشی </string>
    <string name="moreShow"> نمایش بیشتر > </string>

</resources>