<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/GreyBackground"
            android:layout_width="match_parent"
            android:layout_height="340dp"
            android:background="@drawable/bordermainpage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPagerMain2"
                android:layout_width="325dp"
                android:layout_height="175dp"
                android:layout_marginTop="82dp"
                android:background="@drawable/viewpagerborder"
                app:layout_constraintDimensionRatio="1:.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--   استوری ها-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/storyLayout"
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="280dp"
            android:background="@drawable/storyborder"
            android:elevation="5dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/StoryRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="240dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio=""
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/BtnsLineareLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/chat"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="45dp"
                android:background="@drawable/ripple_border"
                android:clickable="true"
                android:drawableTop="@drawable/ic_speech_bubble"
                android:focusable="true"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/chat"
                android:textColor="@color/TextViewColors"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/userProfile"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="18dp"
                android:background="@drawable/ripple_border"
                android:clickable="true"
                android:drawableTop="@drawable/ic_user"
                android:focusable="true"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/UserProfile"
                android:textColor="@color/TextViewColors"
                android:textSize="13dp"
                app:layout_constraintEnd_toStartOf="@+id/chat"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/wallet"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="18dp"
                android:background="@drawable/ripple_border"
                android:clickable="true"
                android:drawableTop="@drawable/ic_wallet"
                android:focusable="true"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/Wallet"
                android:textColor="@color/TextViewColors"
                android:textSize="14dp"
                app:layout_constraintEnd_toStartOf="@+id/userProfile"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/MyTerms"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="18dp"
                android:background="@drawable/ripple_border"
                android:clickable="true"
                android:drawableTop="@drawable/ic_student"
                android:focusable="true"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/myDore"
                android:textColor="@color/TextViewColors"
                android:textSize="14dp"
                app:layout_constraintEnd_toStartOf="@+id/wallet"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layoutDirection="rtl"
        android:orientation="horizontal"
        android:weightSum="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:id="@+id/doreyeAmoozeshi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:drawableStart="@drawable/ic_book"
            android:drawablePadding="10dp"
            android:fontFamily="@font/medium"
            android:paddingStart="0dp"
            android:paddingEnd="4dp"
            android:text="@string/amoozeshi"
            android:textColor="@color/TextViewColors"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/lineView"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="13dp"
            android:layout_weight="5"
            android:background="#C7C7C7" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_weight="2"
            android:fontFamily="@font/bol"
            android:text="@string/moreShow"
            android:textColor="@color/TextViewColors"
            android:textSize="12sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="185dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/CourseRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>